<resources>
    <string name="app_name">Android_Development</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense">Expense</string>
    <string name="amount1">Amount</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="expense_name1">Expense Name</string>
    <string name="expense_amount">Expense Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>