<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/expenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/expense"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/amount1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/expenseText"
        app:layout_constraintStart_toEndOf="@+id/expenseText"
        app:layout_constraintTop_toTopOf="@+id/expenseText" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/amountText"
        app:layout_constraintStart_toEndOf="@+id/amountText"
        app:layout_constraintTop_toTopOf="@+id/amountText"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/detailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="22dp"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toTopOf="@+id/delete_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>