<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <EditText
            android:id="@+id/expenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:autofillHints="Expense Name"
            android:ems="10"
            android:hint="@string/expense_name"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints="Amount"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/expenseName"
            app:layout_constraintTop_toBottomOf="@+id/expenseName" />

        <Button
            android:id="@+id/button"
            android:layout_width="237dp"
            android:layout_height="54dp"
            android:layout_marginTop="25dp"
            android:text="@string/add_expense"
            app:layout_constraintStart_toStartOf="@+id/Amount"
            app:layout_constraintTop_toBottomOf="@+id/Amount" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expenseList"
            android:layout_width="446dp"
            android:layout_height="488dp"
            android:clipChildren="true"
            android:clipToPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/finance_btn"
            android:layout_width="176dp"
            android:layout_height="61dp"
            android:layout_marginBottom="50dp"
            android:text="Financial Tips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.android_development.Header"
            android:layout_width="328dp"
            android:layout_height="47dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/footerContainer"
            android:name="com.example.android_development.Footer"
            android:layout_width="374dp"
            android:layout_height="64dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseList" />


        <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>